<resources>
    <string name="app_name">Revoola</string>
    <string name="applink_host_alternate">revoola-alternate.app.link</string>
    <string name="applink_host">revoola.app.link</string>
    <string name="deeplink_scheme">revoola499</string>
    <string name="title_activity_main">Revoola</string>
    <string name="package_name">com.revoola</string>
    <string name="custom_url_scheme">com.revoola</string>
    <string name="branch_key">key_live_gh0Fkx556QdoRpPPROF06opnzBdxc8bs</string>
    <string name="branch_test_key">key_test_pe7DeB496RoeGbSILMy80mfjzqlub1jg</string>
    <string name="moengage_app_live_key">TVL0SDZ0N1L096MAKXGEUBUP</string>
    <string name="moengage_app_key">TVL0SDZ0N1L096MAKXGEUBUP_DEBUG</string>
    <string name="google_clientId">AIzaSyCOwcSM8SrRxnXsIAkqcwx5rSf4AHclUCw</string>
    <string name="google_clientId2">AIzaSyDKw9AIk36jZMeuGDHQFbGnFt2iv-Tirwg</string>
    <string name="no_conn">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="check_your_connection">You Are Not Connected To Internet. Check Your Connection Or Try Again.</string>
    <string name="logout">Logout</string>
    <string name="exit_app">Do You Want To Logout?</string>
    <string name="exit">Exit</string>
    <string name="exit_app1">Do You Want To Exit?</string>
    <string name="areyousurewanttodeletedata">are you sure you want to delete your account and data?</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="showallclasses">SHOW ALL CLASSES</string>
    <string name="availablefilter">Available Filters</string>
    <string name="youalreadyconnecthealth">You have already Connected to Health Connect</string>
    <string name="youhavesuccessfullyrestored">You have successfully restored purchases</string>
    <string name="ok">ok</string>
    <string name="okcaps">OK</string>
    <string name="instructor">Instructor</string>
    <string name="durationt">Duration</string>
    <string name="takenbyme">Taken By Me</string>
    <string name="classtype">Class Type</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="unitofmeasure">Unit of Measure</string>
    <string name="privacy">Privacy</string>
    <string name="privacycaps">PRIVACY</string>
    <string name="imperial">Imperial</string>
    <string name="overview">OVERVIEW</string>
    <string name="feed">FEED</string>
    <string name="start">START</string>
    <string name="friends">FRIENDS</string>
    <string name="more">MORE</string>
    <string name="winditdown">Wind it Down</string>
    <string name="hidhruv">Hi Dhruv,</string>
    <string name="goodtoseeyou">Good to see you back. Lets get going!</string>
    <string name="keepgoodtoseeyou">Keep up the good work.You are smashing it</string>
    <string name="youractivity">YOUR ACTIVITY</string>
    <string name="effort">EFFORT</string>
    <string name="effortsmall">Effort</string>
    <string name="climbed">Climbed</string>
    <string name="climbedm">CLIMBED (m)</string>
    <string name="climbedft">CLIMBED(FT)</string>
    <string name="mindfulminutes">MINDFUL MINUTES</string>
    <string name="session">SESSIONS</string>
    <string name="activetime">ACTIVE TIME</string>
    <string name="calories">CALORIES</string>
    <string name="heartrate">HEARTRATE</string>
    <string name="cadence">CADENCE</string>
    <string name="caloriessmall">Calories</string>
    <string name="caloriessmallkcal">CALORIES (Kcal)</string>
    <string name="distance">DISTANCE</string>
    <string name="distancemiles">DISTANCE (miles)</string>
    <string name="standinghour">STANDING HOURS</string>
    <string name="distancesmall">Distance</string>
    <string name="distancesmallkm">DISTANCE(km)</string>
    <string name="steps">STEPS</string>
    <string name="stepsmall">Steps</string>
    <string name="thismonth">This Month</string>
    <string name="allactivity">All Activity</string>
    <string name="duration">Duration</string>
    <string name="durationh">DURATION (h)</string>
    <string name="stepdot">Steps</string>
    <string name="effortdot">Effort</string>
    <string name="caloriesdot">Calories</string>
    <string name="distancedot">Distance</string>
    <string name="climbeddot">Climbed</string>
    <string name="durationdot">Duration</string>
    <string name="selectstart">Select the date the challenge should start</string>
    <string name="selectend">Select the date to complete challenge by</string>
    <string name="pleaseentertthestartdate">Please Enter the start date</string>
    <string name="pleaseenterttheenddate">Please Enter the end date</string>
    <string name="next">Next</string>
    <string name="revoolaeffortscore">REVOOLA EFFORT SCORE</string>
    <string name="emailaccount">Email</string>
    <string name="facebookaccount">Facebook</string>
    <string name="googleaccount">Google</string>
    <string name="justhereforaquickpeak">I am not sure why i am here, so let me have a quick peak.</string>
    <string name="fullrevoolaexperience">I want to sign up for the full Revoola Experience!</string>
    <string name="taptoADDYOURPROFILEPICTURE">Tap to edit your photo</string>
    <string name="justsettingthingsupforyou">Just setting things up for you. This will only take a few moments.</string>
    <string name="signuplogin">Sign up/Sign in</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continuel">CONTINUE</string>
    <string name="forgotpassword">Forgot Your password?</string>
    <string name="clickhere">click Here</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="newconformpassword">New Confirm Password</string>
    <string name="update">Update</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="linksend">We will send you link to reset your password.</string>
    <string name="nextcaps">NEXT</string>
    <string name="taptoaddyourprofilepicture">Tap to add your profile picture</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="datedemotexm">--/--/----</string>
    <string name="genderdemotexm">---</string>
    <string name="feetandinches">Feet &amp; Inches</string>
    <string name="metric">Metric</string>
    <string name="uspounds">US Pounds</string>
    <string name="ukstones">UK Stones</string>
    <string name="myride">MyRide</string>
    <string name="time">TIME</string>
    <string name="assumedeffort">ASSUMED EFFORT</string>
    <string name="revoolaeffort">REVOOLA EFFORT</string>
    <string name="step">STEPS</string>
    <string name="calorie">CALORIES</string>
    <string name="weneedtosendverificationcode">We need to send verification code.please confirm your email here.</string>
    <string name="looksgood">LOOKS GOOD</string>
    <string name="changeemail">CHANGE EMAIL</string>
    <string name="pleaseenterverificationcode">Please enter you verification code sent to your email address here.</string>
    <string name="didntreceivethecode">Did not receive your code?</string>
    <string name="resend">Resend</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="nickname">Nick Name</string>
    <string name="nicknameappearon">Your nickname is the name that will appear on the leaderboards and be seen by other revoola members</string>
    <string name="feedsmall">Feed</string>
    <string name="friendssmall">Friends</string>
    <string name="groupsmall">Groups</string>
    <string name="yousmall">You</string>
    <string name="challengessmall">Challenges</string>
    <string name="sessionsummery">Session Summary</string>
    <string name="sessionsummerys">Session summary</string>
    <string name="withouthrmessage">Please connect a compatible  HR Sensor to see analysis</string>
    <string name="feed_challenges_empty_message_1">Currently you have no update on any challenges.</string>
    <string name="feed_challenges_empty_message_2">This may be because you have just joined.If you wish to create a challenge of your own, click on the green + button on the bottom right to go directly to our challenge creation page.</string>
    <string name="feed_challenges_empty_message_3">You could also click the “FRIENDS” icon in the main menu at the bottom of your screen and see how you can easily invite new friends or even create entire groups that you may want to challenge.</string>
    <string name="findonrevoola">Find on Revoola</string>
    <string name="yourfriends">Your Friends</string>
    <string name="yourgroup">Your Groups</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="invite">Invite</string>
    <string name="invitefriendsnotonyet">Invite Your Friends not yet on Revoola.</string>
    <string name="friend">Friends</string>
    <string name="invitefriendnotonrevoola">Invite your friends not on yet Revoola</string>
    <string name="typeofchallenge">Select The Type of Challenge</string>
    <string name="setyourtargetandselecttimeperiod">SET YOUR TARGET AND SELECT TIME PERIOD</string>
    <string name="setyourgoal">Set your Goal</string>
    <string name="sendonfacebook">Send on Facebook</string>
    <string name="sendontwitter">Send on Twitter</string>
    <string name="sendontwhatsapp">Send on WhatsApp</string>
    <string name="sendsms">Send SMS</string>
    <string name="sendemail">Send email</string>
    <string name="send">Send</string>
    <string name="unfollow">Unfollow</string>
    <string name="members">Members</string>
    <string name="followall">Follow All</string>
    <string name="invitetojoin">Invite To Join</string>
    <string name="removeall">Remove All</string>
    <string name="delete">Delete</string>
    <string name="sync">Sync</string>
    <string name="enternameoremailtofindonrevoola">Enter Email Or Name To Search On Revoola</string>
    <string name="enternameemailtofindonrevoola">Enter name/email to find on Revoola</string>
    <string name="friendsyoufollow">You Follow</string>
    <string name="friendsfollowingyou">Following You</string>
    <string name="mygroup">Your Groups</string>
    <string name="creategroup">Create Group</string>
    <string name="contacts">Contacts</string>
    <string name="searchfriends">Search Friends</string>
    <string name="alreadyusingrevoola">Find your contacts already\n using Revoola</string>
    <string name="contact_on_revoola">OF your contacts Are On Revoola</string>
    <string name="synccontacts">Sync Contacts</string>
    <string name="schduledclasses">Scheduled Classes</string>
    <string name="schduled">Scheduled</string>
    <string name="schdule_no_data">You currently have no scheduled activities, new scheduled activities will show here. To create your own scheduled activity click on the start menu and navigate to a body or mind class, choose a class and then you can schedule to do it with friends or a group of friends.</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="edit_your_account_data">EDIT YOUR ACCOUNT DATA</string>
    <string name="setyourgoalchallenge">Set you challenge goal E.g. How many steps, how much effort, calories burnt etc..</string>
    <string name="howlongdoyouwantyourchallenge">How long do you want your challenge to run for?</string>
    <string name="challengescanbeforaslongasyouwant">Challenges can be for as long as you want them to run. A few days, a week, month, several months or even a year !</string>
    <string name="thebestyou">The Best You.</string>
    <string name="everyday">Everyday.</string>
</resources>