<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overview"
        android:icon="@drawable/ic_heart"
        app:showAsAction="withText"
        android:enabled="true"
        android:title="@string/overview"/>
    <item
        android:id="@+id/feed"
        android:icon="@drawable/ic_list"
        app:showAsAction="withText"
        android:enabled="true"
        android:title="@string/feed" />
    <item
        android:id="@+id/start"
        android:icon="@drawable/ic_play_circle"
        app:showAsAction="withText"
        android:enabled="true"
        android:title="@string/start" />
    <item
        android:id="@+id/friends"
        android:icon="@drawable/ic_group"
        app:showAsAction="withText"
        android:enabled="true"
        android:title="@string/friends" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_horiz"
        app:showAsAction="withText"
        android:enabled="true"
        android:title="@string/more" />
</menu>