<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_common" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/off_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:gravity="center"
            android:text="@string/enteryouremail"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:gravity="center"
            android:text="@string/linksend"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="normal" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:visibility="visible"
            android:textSize="@dimen/text_login_size"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etemailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:inputType="text"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/green"
                android:drawablePadding="5dp"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_login_size"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvnext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight= "10dp"
            android:layout_marginTop= "30dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/Gray"
            android:textSize="18sp"
            android:textStyle="normal" />


    </LinearLayout>

</layout>