<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_common" />

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/off_white"/>

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_1"
            android:background="@color/Gray">

            <EditText
                android:id="@+id/edt_friend_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_green"
                android:backgroundTint="@color/lightGray"
                android:drawableStart="@drawable/fr_search_green"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/enternameoremailtofindonrevoola"
                android:minHeight="40dp"
                android:paddingStart="10dp"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lay_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_search"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_seasrch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/txt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/contacts"
                android:textColor="@color/black"/>

            <View
                android:layout_width="90dp"
                android:layout_height="2dp"
                android:background="@color/green"/>
        </LinearLayout>

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/lay_contact"
            android:background="@color/Gray"/>

        <RelativeLayout
            android:id="@+id/relay_synccontact"
            android:layout_width="match_parent"
            android:layout_below="@+id/view_2"
            android:background="@color/off_white"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/img_group"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_person"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_group"
                android:layout_toStartOf="@+id/txt_sync_contact"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synccontacts"
                    android:textStyle="normal"
                    android:textColor="@color/darkGray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txt_group_noofmembers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyusingrevoola"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:textStyle="normal"
                    android:textColor="@color/Gray"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_sync_contact"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/round_border_green"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/sync"
                android:textColor="@color/green"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_yourfriend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/demo_invite"
            android:layout_below="@+id/relay_synccontact"/>

        <TextView
            android:id="@+id/txt_inviteyourfriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/login_btn"
            android:backgroundTint="@color/green"
            android:padding="5dp"
            android:text="@string/invitefriends"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/demo_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_inviteyourfriend"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/invitefriendsnotonyet"
            android:textColor="@color/Gray"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />


    </RelativeLayout>

</layout>